# fancyWalletAddress

./: AGENTS.md  Cargo.toml  Makefile  README.md  build.rs  result.txt
src/: address.rs  cli.rs  gpu_worker.rs  main.rs  shader.wgsl  worker.rs
