[package]
name = "fancy_wallet_address"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
hex = "0.4.3"
notify-rust = "4.10.0"
num_cpus = "1.16.0"
rayon = "1.9.0"
secp256k1 = { version = "0.28.0", features = ["rand-std", "global-context"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
bs58 = { version = "0.5.0", features = ["check"] }
sha2 = "0.10.8"
rand = "0.8"
futures-intrusive = "0.5"

# GPU feature dependencies
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.12", features = ["derive"], optional = true }

[features]
gpu = ["wgpu", "pollster", "bytemuck"]